--- a/meu-linktree1.0/css/style.css
+++ b/meu-linktree1.0/css/style.css
@@ -27,6 +27,7 @@ h1{
 }
 h2{
     font-size: 16px ;
+    padding: 10px;
 }
 .profile{
     margin-top: 20px;
@@ -86,4 +87,9 @@ h2{
     color: grey;
     display: block;
     margin-top: 10px;
+}
+footer{
+    margin-top: 20px;
+    text-align: center;
+    font-size: small;
 }
