--- a/meu-linktree1.0/css/style.css
+++ b/meu-linktree1.0/css/style.css
@@ -33,6 +33,19 @@ h2{
     margin-top: 20px;
     text-align: center;
 }
+.iframe-container{
+    position: relative;
+    width:100%;
+    padding-bottom:56.25%;
+    height: 0;
+}
+.iframe-container iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width:100%;
+    height:100%;
+}
 .socialmedia{
     display: flex;
     justify-content: space-around;
