--- a/meu-linktree1.0/css/style.css
+++ b/meu-linktree1.0/css/style.css
@@ -8,37 +8,40 @@ html,body{
 body{
     font-family: 'Josefin Sans', sans-serif;
     color: rgb(10, 10, 10);
-    background: rgb(255, 255, 255);
-    background: linear-gradient(176deg, rgb(255, 255, 255) 0%, rgb(153, 153, 153) 100%);
+    background: rgb(66,172,192);
+    background: linear-gradient(180deg, rgba(66,172,192,1) 6%, rgba(29,45,88,1) 88%);
     background-attachment: fixed;
 }
 .avatar{
     width: 100px;
     padding: 2px;
     border-radius: 50px;
-    border: 2px solid black;
-    /**box-shadow: 0 0 10px black;**/
+    border: 2px solid #1D2D58;
+    box-shadow: 0 0 7px #f9fbfc;
 }
 h1{
     font-family: 'Kaushan Script', cursive;
     font-weight: 100;
-    font-size: 25px;
+    font-size: 30px;
     margin-bottom: 1.5px;
+   
 }
 h2{
     font-size: 16px ;
     padding: 10px;
+  
 }
 .profile{
     margin-top: 20px;
     text-align: center;
+    color:#1D2D58;
 }
 .iframe-container{
     position: relative;
     width:100%;
     padding-bottom:56.25%;
     height: 0;
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px white;
 }
 .iframe-container iframe{
     position: absolute;
@@ -70,23 +73,24 @@ h2{
 }
 .links-list li a{
     display: block;
-    background: white;
+    background:none;
     padding: 15px 20px;
-    border-radius: 40px;
+    border-radius: 5px;
+    border: 2px solid black;
     text-decoration: none;
     color: rgb(3, 3, 3);
     font-weight: bold;
 }
 .links-list li a:hover{
-    background: #c4c4c4;
-    color: white;
+    background: #c4c4c477;
+    color: black;
 }
 .links-list li a span:hover{
    
     color:black;
 }
 .links-list li a span{
-    color: grey;
+    color: white;
     display: block;
     margin-top: 10px;
 }
